--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,11 +1,11 @@
 ---
 layout: default
 modal-id: 3
-date: 2014-07-16
-img: circus.png
+date: 2024-12-04
+img: MATCH.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
+project-date: November 2024
+client: 송현석
 category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+description: 경기 세부 지표를 확인할 수 있는 페이지입니다. 해당 경기에서 기록된 여러 데이터와 선발 출전 선수 및 교체 선수 등을 구현하였습니다.
 ---
