--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,11 +1,11 @@
 ---
 layout: default
 modal-id: 5
-date: 2024-12-05
-img: LOGIN.png
+date: 2024-07-14
+img: BOARD.png
 alt: image-alt
 project-date: Januery 2024
 client: 송현석
 category: Web Development
-description: 로그인 페이지입니다. 사용자가 입력한 Id, Password는 Controller, Service를 거쳐 DB에 저장된 모든 회원 데이터 중 일치하는 데이터를 return 합니다.
+description: 게시판 페이지입니다. 사용자들이 작성한 게시글들을 확인할 수 있습니다. 로그인 이후에는 게시글 작성 및 수정이 가능하며 다른 사용자의 게시글에 댓글 및 좋아요 기능도 이용할 수 있습니다.
 ---
