--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,11 +1,11 @@
 ---
 layout: default
-modal-id: 6
-date: 2024-12-05
-img: SHOP.png
+modal-id: 4
+date: 2024-12-04
+img: JOIN.png
 alt: image-alt
 project-date: Januery 2024
 client: 송현석
 category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+description: 회원가입 페이지입니다. 입력한 개인정보는 DB에 저장됩니다.
 ---
