--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: BOARD.png
+img: JOIN.png
 alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description: 게시판 페이지입니다. 사용자들이 작성한 게시글들을 확인할 수 있습니다. 로그인 이후에는 게시글 작성 및 수정이 가능하며 다른 사용자의 게시글에 댓글 및 좋아요 기능도 이용할 수 있습니다.
+description: 회원가입 페이지입니다. 입력한 개인정보는 DB에 저장됩니다.
 ---
