--- a/_posts/2024-12-04-project-1.markdown
+++ b/_posts/2024-12-04-project-1.markdown
@@ -2,10 +2,10 @@
 layout: default
 modal-id: 1
 date: 2024-12-04
-img: HOME.png
+img: ARTICLE.png
 alt: image-alt
-project-date: November 2024
-client: Start Bootstrap
+project-date: January 2024
+client: 송현석
 category: Web Development
-description:  프로젝트의 홈 화면입니다. Spring Boot, MySQL 기반으로 회원가입, 로그인, 게시판 기능을 구현하였고 API-Football에서 제공하는 데이터를 활용하여 축구 팬들의 주요 관심 리그 및 컵 대회 일정, 결과, 순위 등을 확인할 수 있는 사이트를 제작하였습니다.
+description: aaaaaaaaaaaaaaa
 ---
