--- a/_posts/2024-12-04-project-2.markdown
+++ b/_posts/2024-12-04-project-2.markdown
@@ -1,11 +1,11 @@
 ---
 layout: default
-modal-id: 2
+modal-id: 4
 date: 2024-12-04
-img: LEAGUE.png
+img: BOARD.png
 alt: image-alt
 project-date: November 2024
 client: 송현석
 category: Web Development
-description: 리그 현황을 확인할 수 있는 페이지입니다. 해당 리그의 모든 경기 주요 데이터, 순위를 구현했습니다.
+description: 게시판 페이지입니다. 사용자들이 작성한 게시글들을 확인할 수 있습니다. 로그인 이후에는 게시글 작성 및 수정이 가능하며 다른 사용자의 게시글에 댓글 및 좋아요 기능도 이용할 수 있습니다.
 ---
