--- a/_posts/2024-12-04-project-1.markdown
+++ b/_posts/2024-12-04-project-1.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description: aaaaaaaaaaaaaaa
+description: 게시글 페이지입니다. 
 ---
