--- a/_posts/2024-12-04-project-2.markdown
+++ b/_posts/2024-12-04-project-2.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: November 2024
 client: 송현석
 category: Web Development
-description: 게시판 페이지입니다. 사용자들이 작성한 게시글들을 확인할 수 있습니다. 로그인 이후에는 게시글 작성 및 수정이 가능하며 다른 사용자의 게시글에 댓글 및 좋아요 기능도 이용할 수 있습니다.
+description: 게시판 페이지입니다. 사용자들이 작성한 게시글들을 확인할 수 있습니다. 로그인 후 게시글 작성이 가능하며 작성한 게시글은 DB에 저장됩니다.
 ---
