--- a/_posts/2024-12-04-project-4.markdown
+++ b/_posts/2024-12-04-project-4.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description: 로그인 페이지입니다. 사용자가 입력한 Id, Password는 Controller, Service를 거쳐 DB에 저장된 모든 회원 데이터 중 일치하는 데이터를 return 합니다.
+description: 로그인 페이지입니다.
 ---
