--- a/_posts/2024-12-04-project-1.markdown
+++ b/_posts/2024-12-04-project-1.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description: 게시글 페이지입니다. 
+description: 게시글 페이지입니다. DB에 저장된 게시글 내용을 출력합니다. 로그인 후 추천과 댓글 작성이 가능합니다. '좋아요' 버튼을 누르면 추천 수가 1 증가하고 횟수 제한을 위해 버튼 활성화 상태가 유지됩니다. 활성화된 버튼을 클릭하면 추천 수가 1 감소하고 버튼 활성화 상태는 해제됩니다. 작성한 댓글은 DB에 저장되며 수정 및 삭제가 가능합니다. 추천, 댓글 기능 모두 AJAX로 비동기 처리하여 페이지를 재출력하지 않도록 구현하였습니다.
 ---
