--- a/_posts/2024-12-04-project-5.markdown
+++ b/_posts/2024-12-04-project-5.markdown
@@ -7,5 +7,7 @@ alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description: 회원가입 페이지입니다. 입력한 개인정보는 DB에 저장됩니다.
+description1: 회원가입 페이지입니다.
+description2: 입력한 개인정보는 DB에 저장됩니다.
+description3:
 ---
