--- a/_posts/2024-12-04-project-8.markdown
+++ b/_posts/2024-12-04-project-8.markdown
@@ -7,5 +7,7 @@ alt: image-alt
 project-date: November 2024
 client: 송현석
 category: Web Development
-description: 리그 현황을 확인할 수 있는 페이지입니다. 해당 리그의 모든 경기 주요 데이터, 순위를 구현했습니다.
+description1: 리그 현황을 확인할 수 있는 페이지입니다.
+description2: 해당 리그의 모든 경기 주요 데이터, 순위를 구현했습니다.
+description3:
 ---
