--- a/_posts/2024-12-04-project-3.markdown
+++ b/_posts/2024-12-04-project-3.markdown
@@ -7,7 +7,6 @@ alt: image-alt
 project-date: January 2024
 client: 송현석
 category: Web Development
-description1: 회원 개인정보 페이지입니다. DB에 저장된 회원 데이터를 출력합니다.
-description2: 오른쪽 하단의 '회원정보수정' 버튼을 클릭하면 개인정보를 수정할 수 있는 페이지로 이동합니다.
-description3: 출석체크 버튼을 클릭하면 20코인을 획득할 수 있으며 코인은 상점에서 상품을 구매하는데 사용 가능합니다. 현재 버튼 활성화 하루 1회 제한 기능을 구현 중이며 코인 베팅 시스템도 기획 중입니다.
+description1: 회원 개인정보 페이지입니다.
+description2: DB에 저장된 회원 데이터를 출력합니다. 오른쪽 하단의 '회원정보수정' 버튼을 클릭하면 개인정보를 수정할 수 있는 페이지로 이동합니다. 출석체크 버튼을 클릭하면 20코인을 획득할 수 있으며 코인은 상점에서 상품을 구매하는데 사용 가능합니다. 현재 버튼 활성화 하루 1회 제한 기능을 구현 중이며 코인 베팅 시스템도 기획 중입니다.
 ---
