--- a/_posts/2024-12-04-project-4.markdown
+++ b/_posts/2024-12-04-project-4.markdown
@@ -8,6 +8,5 @@ project-date: January 2024
 client: 송현석
 category: Web Development
 description1: 로그인 페이지입니다.
-description2: 입력한 Id, Password는 Controller, Service를 거쳐 DB에서 회원 데이터를 return 하여 Session에 설정합니다.
-description3: 사용자가 Id, Password를 기억하지 못하는 경우를 위해 오른쪽 하단 아이디, 비밀번호 찾기 기능을 이용할 수 있습니다.
+description2: 입력한 Id, Password는 Controller, Service를 거쳐 DB에서 회원 데이터를 return 하여 Session에 설정합니다. 사용자가 Id, Password를 기억하지 못하는 경우를 위해 오른쪽 하단 아이디, 비밀번호 찾기 기능을 이용할 수 있습니다.
 ---
